# qiconthemebuilder

./: CMakeLists.txt  breeze-icons.patch  qiconthemebuilder.py
